Adding history now triggers mathjax update
Quick summary of next-step plans:
- Fix: when the history panel is folded, it's still visible when the page is scrolled to the right, which causes trouble on a mobile browser; font size problems; deletion of history item not resulting in update
- Add: custom math structure; custom commands; help panel; different display styles; settings panel; edit and reorder history items
- Improve: the dialog boxes now use the default js template; the history panel should be scrolled without affecting the main page; **Important** export math as picture file

--- a/LaTeX editor style.css
+++ b/LaTeX editor style.css
@@ -107,16 +107,6 @@ table td{
 	width: 72%;
 	transition: width 0.5s;
 }
-#output {
-	margin: auto;
-	height: 50%;
-	box-sizing: border-box;
-	display: table;
-}
-#output > div {
-	display: table-cell;
-	vertical-align: middle;
-}
 #input {
 	width: 90%;
 	box-sizing: border-box;
@@ -124,6 +114,17 @@ table td{
 	padding: 1em;
 	margin: 0;
 	font-size:20px;
+}
+#output {
+	margin:auto;
+	box-sizing: border-box;
+	display: table;
+	margin-top:40px;
+	width:90%;
+}
+#output > div {
+	display: table-cell;
+	vertical-align: middle;
 }
 #history{
 	width: 310px;
@@ -133,7 +134,7 @@ table td{
 	position: absolute;
 	box-shadow: -10px 0px 20px 0px rgb(204,204,204);
 	background-color: #EEEEEE;
-	transition: margin-right 0.5s;
+	transition: right 0.5s;
 }
 #history ul{
 	float:left;
@@ -192,6 +193,7 @@ table td{
 	color: darkslategray;
 	cursor: pointer;
 	z-index:1;
+	outline:none;
 }
 .MathJax {
 	outline: 0;
