--- a/LaTeX editor style.css
+++ b/LaTeX editor style.css
@@ -30,6 +30,17 @@ header {
 	top:5px;
 	cursor: pointer;
 }
+.overlay{
+	display: none;
+	position: absolute;
+	top: 0%;
+	left: 0%; 
+	width: 100%; 
+	height: 100%; 
+	background-color: rgba(0,0,0,0.4); 
+	z-index:3; 
+	filter: alpha(opacity=50); 
+} 
 #Helppanel{
 	margin:auto;
 	left:0;right:0;top:0;bottom:0;
@@ -42,6 +53,7 @@ header {
 	transition: all 0.3s linear;
 	border: 2px solid steelblue;
 	border-radius: 15px 15px 15px 15px;
+	z-index:4;
 }
 #helpText{
 	height:300px;
