--- a/LaTeX editor style.css
+++ b/LaTeX editor style.css
@@ -236,11 +236,52 @@ table td{		width: 20px;}
 #menu2{display:none;}
 #catalog{
 	margin-left: 20px;
+	position:relative;
+	left:12px;
+}
+#catalog tr:nth-child(odd){
+	background: rgba(70,130,180,0.3);
+}
+#catalog tr:nth-child(1){
+	background: rgba(70,130,180,0.7);
 }
 #catalog tr td{
 	width:150px;
 }
+#catalog tr td:nth-child(3){
+	width:20px;
+	background:#EEEEEE;
+}
 #menu3{display:none;}
+#menu3 form{
+	width: 100%;
+	height: 50px;
+	text-align: center;
+	line-height: 50px;
+}
+#menu3 img{
+	margin-top:30px;
+	margin-bottom:-10px;
+	margin-left:25px;
+}
+#submitBtn{
+	width:25%;
+	height:33px;
+	border-radius:2px;
+	position:relative;
+	top:-10px;
+	font-size:13px;
+	background-color: rgba(90,150,200,0.6);
+}
+#url{
+	margin-top:0px;
+	margin-left:10px;
+	margin-bottom:15px;
+	width:65%;
+	height:30px;
+	font-size:15px;
+	float:left;
+}
 #menu4{display:none;}
 .overlay{
 	display: none;
@@ -310,12 +351,17 @@ table td{		width: 20px;}
 	font-size:20px;
 }
 #AddSC input{
-	margin-left:5px;
 	margin-top:20px;
 	margin-bottom:10px;
 	width:70%;
 	height:25px;
 	outline: none;
+}
+#short{
+	margin-left:5px;
+}
+#cut{
+	margin-left:40px;
 }
 .cancel{
 	margin-left:460px;
